MemSnapshot class and a few eye candies :)

--- a/CheatEngine/CheatEngine.vcxproj.filters
+++ b/CheatEngine/CheatEngine.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="Process.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MemSnapshot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Process.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MemSnapshot.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MemInvaderInclude.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
