--- a/CheatEngine/CheatEngine.vcxproj.filters
+++ b/CheatEngine/CheatEngine.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="MemFilter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MemoryMapped.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Process.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MemFilter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MemoryMapped.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
