--- a/CheatEngine/CheatEngine.vcxproj.filters
+++ b/CheatEngine/CheatEngine.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="MemoryMapped.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TcpConnection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Process.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MemoryMapped.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TcpConnection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
